--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
-      "plugin:cypress/recommended"
+      "plugin:cypress/recommended",
+      "prettier"
   ]
 }
