--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "api-test-heroku": "cypress run --spec cypress/integration/api-demo/api-test-heroku.spec.ts",
     "api-test": "cypress run --spec cypress/integration/api-demo/api-test.spec.ts",
     "ui-test": "cypress run --spec cypress/integration/ui-demo/**",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "lint": "npx eslint ./cypress"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
     "cypress": "^9.7.0",
     "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "prettier": "^2.6.2",
     "ts-node": "^10.8.0",
