--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "api-test": "cypress run --spec cypress/integration/api-demo/api-test.spec.ts",
     "ui-test": "cypress run --spec cypress/integration/ui-demo/**",
     "cypress:open": "cypress open",
-    "lint": "npx eslint ./cypress"
+    "lint": "npx eslint ./cypress",
+    "report:merge": "mochawesome-merge cypress/results/json/*.json > index.json",
+    "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +18,14 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "cypress": "^9.7.0",
+    "cypress-multi-reporters": "^1.6.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0",
     "prettier": "^2.6.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
