--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "api-test-heroku": "cypress run --spec cypress/integration/api-demo/api-test-heroku.spec.ts",
+    "api-test-todo": "cypress run --spec cypress/integration/api-demo/api-test-todo.spec.ts",
     "api-test": "cypress run --spec cypress/integration/api-demo/api-test.spec.ts",
     "ui-test": "cypress run --spec cypress/integration/ui-demo/**",
     "cypress:open": "cypress open",
